# flumotion-ugly

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  autoregen.sh  configure.ac  env.in  flumotion-ugly.spec.in  index.html
debian/: changelog  control  copyright  files  rules  watch
flumotion/: Makefile.am
flumotion/component/: Makefile.am
flumotion/component/encoders/: Makefile.am
flumotion/component/encoders/faac/: Makefile.am  faac.py  faac.xml  wizard_gtk.py
flumotion/component/encoders/lamemp3/: Makefile.am  lamemp3.py  lamemp3.xml  wizard_gtk.py
flumotion/component/encoders/x264/: Makefile.am  wizard.glade  wizard_gtk.py  x264.py  x264.xml
flumotion/component/muxers/: Makefile.am
flumotion/component/muxers/faac/: Makefile.am  faac.py  faac.xml
flumotion/component/muxers/gstflv/: Makefile.am  gstflv.py  gstflvmuxer.xml  wizard_gtk.py
flumotion/component/muxers/lamemp3/: Makefile.am  lamemp3.py  lamemp3.xml
flumotion/project/: Makefile.am  ugly.py.in
flumotion/test/: Makefile.am  common.py
misc/: Makefile.am  preamble.py  pycheckerhelp.py
po/: Makevars  POTFILES.in  flumotion-template.pot  fr.gmo  fr.po  nl.gmo  nl.po
